# rocket-simple-crud

./: Cargo.toml  README.md
src/: main.rs
src/config/: database.rs
src/controller/: operations.rs
src/handler/: error_handler.rs  response.rs
src/models/: user.rs
src/utils/: mod.rs  response_creator.rs
