[package]
name = "user_authentication_api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = {version = "0.5.0-rc.1", features = ["json"]}
dotenv = {version = "0.15.0"}
serde = {version = "1.0.136"}
mongodb = {version = "2.2.0"}